completed team selection compnenet

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,1 +1,2 @@
+<!-- <app-team-selection-component></app-team-selection-component> -->
 <app-player-selection-component></app-player-selection-component>
