--- a/frontend/src/app/team-selection-component/team-selection-component.component.html
+++ b/frontend/src/app/team-selection-component/team-selection-component.component.html
@@ -1,1 +1,78 @@
-<p>team-selection-component works!</p>
+<header>
+    <ul class="nav nav-pills nav-fill gap-2 p-1 small bg-primary rounded-5 shadow-sm" id="pillNav2" role="tablist"
+        style="--bs-nav-link-color: var(--bs-white); --bs-nav-pills-link-active-color: var(--bs-primary); --bs-nav-pills-link-active-bg: var(--bs-white);">
+        <li class="nav-item" role="presentation">
+            <button class="nav-link active rounded-5" id="home-tab2" data-bs-toggle="tab" type="button" role="tab"
+                aria-selected="true">Home</button>
+        </li>
+        <li class="nav-item" role="presentation">
+            <button class="nav-link rounded-5" id="profile-tab2" data-bs-toggle="tab" type="button" role="tab"
+                aria-selected="false">Pick Player</button>
+        </li>
+        <li class="nav-item" role="presentation">
+            <button class="nav-link rounded-5" id="contact-tab2" data-bs-toggle="tab" type="button" role="tab"
+                aria-selected="false">Times & dates</button>
+        </li>
+        <li class="nav-item" role="presentation">
+            <button class="nav-link rounded-5" id="contact-tab2" data-bs-toggle="tab" type="button" role="tab"
+                aria-selected="false">Contact</button>
+        </li>
+    </ul>
+</header>
+
+<div class="selector">
+
+    <div class="content-container ">
+        <button class=" selectbtn btn btn-primary" (click)="selectRandomOption()">Select Random Option</button>
+    </div>
+
+</div>
+<div *ngIf="isTeamdetails" class="teamtable-center ">
+    <div>
+        <h4>Captain : {{captain}}</h4>
+    </div>
+    <table class="table-success table table-dark table-striped table-bordered border-white table-hover mt-3 tablesize">
+        <thead style="color:black">
+            {{team}} players
+        </thead>
+        <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Name</th>
+                <th scope="col">Skill</th>
+                <th scope="col">Gender</th>
+                <th scope="col">Email</th>
+                <th scope="col">Contact</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let us of readData 
+     let i= index " class="table-success">
+                <th scope="row">{{us.id}}</th>
+                <th>{{us.name}}</th>
+                <td>{{us.skill}}</td>
+                <td>{{us.gender}}</td>
+                <td>{{us.email}}</td>
+                <td>{{us.contact}}</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+<div class="overlay" *ngIf="pickTeamflag">
+    <div class="content-container ">
+        <div class="  winnerBox">
+            <div>The Lucky team Is </div>
+            &nbsp;
+            <div class="winnerTeam"> {{currentTeam}}</div>
+        </div>
+        <div>
+        </div>
+        <div class="winnerbuttons">
+            <button class="btn btn-primary  addPlayerToTheTeamButton" (click)="Continue()"
+                [disabled]="addPlayerButtonDisabled">Take this Team
+            </button>
+            &nbsp;
+            <button class="btn btn-primary " (click)="Cancel()">Cancel the this Team</button>
+        </div>
+    </div>
+</div>
