updated player selection component

--- a/frontend/src/app/player-selection-component/player-selection-component.component.css
+++ b/frontend/src/app/player-selection-component/player-selection-component.component.css
@@ -18,7 +18,10 @@
   margin-left: 50px;
   margin-right: 50px;
 }
-
+/* .......................................................error message ............................................................................*/
+.error{
+  color: red;
+}
 /* ............................................................................player picker box  ....................................................*/
 .overlay {
   position: fixed;
@@ -61,3 +64,13 @@
   color: green;
   font-size:xx-large;
 }
+
+.roundRobinNames{
+  text-align: center;
+  color: blue;
+  font-size:x-large;
+}
+
+/* ..................................................................................winner celebration............................... */
+
+
