--- a/frontend/src/app/team-selection-component/team-selection-component.component.html
+++ b/frontend/src/app/team-selection-component/team-selection-component.component.html
@@ -27,7 +27,7 @@
     </div>
 
 </div>
-<div *ngIf="isTeamdetails" class="teamtable-center ">
+<div *ngIf="selectedTeamName" class="teamtable-center ">
     <div>
         <h4>Captain : {{captain}}</h4>
     </div>
