--- a/frontend/src/app/player-selection-component/player-selection-component.component.css
+++ b/frontend/src/app/player-selection-component/player-selection-component.component.css
@@ -22,6 +22,14 @@
 .error{
   color: red;
 }
+
+.pickerror{
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+  flex-direction:column ;
+  align-items: center;
+}
 /* ............................................................................player picker box  ....................................................*/
 .overlay {
   position: fixed;
