upgraded home component design

--- a/frontend/src/app/player-selection-component/player-selection-component.component.html
+++ b/frontend/src/app/player-selection-component/player-selection-component.component.html
@@ -1,3 +1,4 @@
+<app-nav-bar-component></app-nav-bar-component>
 <app-team-selection-component (haveTeam)="teamSelectedvalue($event)"></app-team-selection-component>
 
 <div>
