--- a/frontend/src/app/home-component/home-component.component.html
+++ b/frontend/src/app/home-component/home-component.component.html
@@ -1,45 +1,31 @@
 
 
-<header>
-  <ul class="nav nav-pills nav-fill gap-2 p-1 small bg-primary rounded-5 shadow-sm" id="pillNav2" role="tablist"
-      style="--bs-nav-link-color: var(--bs-white); --bs-nav-pills-link-active-color: var(--bs-primary); --bs-nav-pills-link-active-bg: var(--bs-white);">
-      <li class="nav-item" role="presentation" >
-          <button class="nav-link active rounded-5" id="home-tab2" data-bs-toggle="tab" type="button" role="tab"
-              aria-selected="true" >Home</button>
-      </li>
-      <li class="nav-item" role="presentation" >
-          <button class="nav-link rounded-5" id="profile-tab2" data-bs-toggle="tab" type="button" role="tab"
-              aria-selected="false">Pick Player</button>
-      </li>
-      <li class="nav-item" role="presentation">
-          <button class="nav-link rounded-5" id="contact-tab2" data-bs-toggle="tab" type="button" role="tab"
-              aria-selected="false">Times & dates</button>
-      </li>
-      <li class="nav-item" role="presentation">
-          <button class="nav-link rounded-5" id="contact-tab2" data-bs-toggle="tab" type="button" role="tab"
-              aria-selected="false">Contact</button>
-      </li>
-  </ul>
-</header>
+<body>
+  <app-nav-bar-component></app-nav-bar-component>
+  <div class="mainlogo">
+    <img src="/assets/img/rpl.png" alt="Image 1">
+    <!-- <p style="color: brown;">{{seasonNumber}}</p> -->
+  </div>
+
+<div class="container">
+  <div class="img-holder mighty"><a href="#" target="_main"><img src="/assets/img/mighty.png" alt="Image 1"></a></div>
+  <div class="img-holder spartain"><a href="#" target="_main"><img src="/assets/img/spartain.png" alt="Image 1"></a>
+</div>
+  <div class="img-holder uranus"><a href="#" target="_main"><img src="/assets/img/uranus.png" alt="Image 1"></a></div>
+  <div class="img-holder mars"><a href="#" target="_main"><img src="/assets/img/mars.png" alt="Image 1"></a></div>
+
+  <div class="img-holder mercury"><a href="#" target="_main"><img src="/assets/img/mercury.png" alt="Image 1"></a></div>
+  <div class="img-holder neptune"><a href="#" target="_main"><img src="/assets/img/neptune.png" alt="Image 1"></a></div>
+  <div class="img-holder venus"><a href="#" target="_main"><img src="/assets/img/venus.png" alt="Image 1"></a></div>
+  <div class="img-holder vesta"><a href="#" target="_main"><img src="/assets/img/vesta.png" alt="Image 1"></a></div>
 
 
-    
-     <div class="container">
-        <div class="img-holder"><a href="#" target="_main"><img src="/assets/img/img1.png" alt="Image 1"></a></div>
-        <div class="img-holder"><a href="#" target="_main"><img src="/assets/img/img2.png" alt="Image 1"></a></div>
-        <div class="img-holder"><a href="#" target="_main"><img src="/assets/img/img3.png" alt="Image 1"></a></div>
-        <div class="img-holder"><a href="#" target="_main"><img src="/assets/img/img4.png" alt="Image 1"></a></div>
-        
-     
-        <div class="img-holder"><a href="#" target="_main"><img src="/assets/img/img5.png" alt="Image 1"></a></div>
-        <div class="img-holder"><a href="#" target="_main"><img src="/assets/img/img6.png" alt="Image 1"></a></div>
-        <div class="img-holder"><a href="#" target="_main"><img src="/assets/img/img7.png" alt="Image 1"></a></div>
-        <div class="img-holder"><a href="#" target="_main"><img src="/assets/img/img8.png" alt="Image 1"></a></div>
-       
-      
-        <div class="img-holder"><a href="#" target="_main"><img src="/assets/img/img9.png" alt="Image 1"></a></div>
-        <div class="img-holder"><a href="#" target="_main"><img src="/assets/img/img10.png" alt="Image 1"></a></div>
-        <div class="img-holder"><a href="#" target="_main"><img src="/assets/img/img11.png" alt="Image 1"></a></div>
-        <div class="img-holder"><a href="#" target="_main"><img src="/assets/img/img12.png" alt="Image 1"></a></div>
-   
-      </div>
+  <div class="img-holder saturn"><a href="#" target="_main"><img src="/assets/img/saturn.png" alt="Image 1"></a></div>
+  <div class="img-holder pluto"><a href="#" target="_main"><img src="/assets/img/pluto.png" alt="Image 1"></a></div>
+  <div class="img-holder earth"><a href="#" target="_main"><img src="/assets/img/earth.png" alt="Image 1"></a></div>
+  <div class="img-holder eris"><a href="#" target="_main"><img src="/assets/img/eris.png" alt="Image 1"></a></div>
+
+
+
+</div>
+</body>
