--- a/frontend/src/app/home-component/home-component.component.html
+++ b/frontend/src/app/home-component/home-component.component.html
@@ -1,5 +1,3 @@
-
-
 <body>
   <app-nav-bar-component></app-nav-bar-component>
   <div class="mainlogo">
@@ -7,25 +5,44 @@
     <!-- <p style="color: brown;">{{seasonNumber}}</p> -->
   </div>
 
-<div class="container">
-  <div class="img-holder mighty"><a href="#" target="_main"><img src="/assets/img/mighty.png" alt="Image 1"></a></div>
-  <div class="img-holder spartain"><a href="#" target="_main"><img src="/assets/img/spartain.png" alt="Image 1"></a>
-</div>
-  <div class="img-holder uranus"><a href="#" target="_main"><img src="/assets/img/uranus.png" alt="Image 1"></a></div>
-  <div class="img-holder mars"><a href="#" target="_main"><img src="/assets/img/mars.png" alt="Image 1"></a></div>
+  <div class="container">
+    <div class="img-holder mighty"><a target="_main"><img src="/assets/img/Mighty Mavericks.png"
+          (click)="navigateTeam('Mighty Mavericks')"></a></div>
+    <div class="img-holder spartain"><a target="_main"><img src="/assets/img/Spartan Strikers.png"
+          (click)="navigateTeam('Spartan Strikers')"></a>
+    </div>
+    <div class="img-holder uranus"><a target="_main"><img src="/assets/img/Uranus Hurricans.png"
+          (click)="navigateTeam('Uranus Hurricans')"></a></div>
+    <div class="img-holder mars"><a target="_main"><img src="/assets/img/Mars Thunders.png"
+          (click)="navigateTeam('Mars Thunders')"></a></div>
 
-  <div class="img-holder mercury"><a href="#" target="_main"><img src="/assets/img/mercury.png" alt="Image 1"></a></div>
-  <div class="img-holder neptune"><a href="#" target="_main"><img src="/assets/img/neptune.png" alt="Image 1"></a></div>
-  <div class="img-holder venus"><a href="#" target="_main"><img src="/assets/img/venus.png" alt="Image 1"></a></div>
-  <div class="img-holder vesta"><a href="#" target="_main"><img src="/assets/img/vesta.png" alt="Image 1"></a></div>
+    <div class="img-holder mercury"><a target="_main"><img src="/assets/img/Mercury Steelers.png"
+          (click)="navigateTeam('Mercury Steelers')"></a></div>
+    <div class="img-holder neptune"><a target="_main"><img src="/assets/img/Neptune Knights.png"
+          (click)="navigateTeam('Neptune Knights')"></a></div>
+    <div class="img-holder venus"><a target="_main"><img src="/assets/img/Venus Warriors.png"
+          (click)="navigateTeam('Venus Warriors')"></a></div>
+    <div class="img-holder vesta"><a target="_main"><img src="/assets/img/Vesta Avengers.png"
+          (click)="navigateTeam('Vesta Avengers')"></a></div>
 
 
-  <div class="img-holder saturn"><a href="#" target="_main"><img src="/assets/img/saturn.png" alt="Image 1"></a></div>
-  <div class="img-holder pluto"><a href="#" target="_main"><img src="/assets/img/pluto.png" alt="Image 1"></a></div>
-  <div class="img-holder earth"><a href="#" target="_main"><img src="/assets/img/earth.png" alt="Image 1"></a></div>
-  <div class="img-holder eris"><a href="#" target="_main"><img src="/assets/img/eris.png" alt="Image 1"></a></div>
+    <div class="img-holder saturn"><a target="_main"><img src="/assets/img/Saturn Superstars.png"
+          (click)="navigateTeam('Saturn Superstars')"></a></div>
+    <div class="img-holder pluto"><a target="_main"><img src="/assets/img/Pluto Panthers.png"
+          (click)="navigateTeam('Pluto Panthers')"></a></div>
+    <div class="img-holder earth"><a target="_main"><img src="/assets/img/Earth Heros.png"
+          (click)="navigateTeam('Earth Heros')"></a></div>
+    <div class="img-holder eris"><a target="_main"><img src="/assets/img/Eris Falcons.png"
+          (click)="navigateTeam('Eris Falcons')"></a></div>
 
 
 
-</div>
+  </div>
 </body>
+<footer>
+  <div class="foo">
+    <div class="fotext">TITLE SPONSOR <a href="https://www.realpage.com/"><img src="/assets/img/realpagelogo.png" h></a>
+    </div>
+
+  </div>
+</footer>
