--- a/frontend/src/app/team-details-component/team-details-component.component.html
+++ b/frontend/src/app/team-details-component/team-details-component.component.html
@@ -22,10 +22,13 @@
 
     </div>
 
-    <div class="playerdetails">
-        harihs
-        majf
-        kjdfldkj
-        kdjvldkj
-    </div>
+    <div class="container">
+        <div class="player-holder"  *ngFor="let player of players">
+        
+            <div class="img"></div>
+            <div class="data"><div class="name">{{player.name}}</div><div class="skill">{{player.skill}}</div></div>
+            
+          </div>
+          
+        </div>
 </body>
