--- a/frontend/src/app/team-selection-component/team-selection-component.component.css
+++ b/frontend/src/app/team-selection-component/team-selection-component.component.css
@@ -17,27 +17,6 @@ header {
 
 }
 /* -----------------------------------teamtable---------------------------------------- */
-.teamtable-center {
-  width: 50%;
-  /* adjust the width as needed */
-  margin: 0 auto;
-  display: flex;
-  margin-top: 50px;
-  flex-direction: column;
-  justify-content: center
-}
-.teamtable-hover{
-  background-color: rgb(255, 255, 255);
-  color: white;
-  padding: 10px;
-  transition: all 0.3s ease-in-out;
-  /* Add a transition effect for a smoother animation */
-}
-
-.teamtable-hover:hover {
-  background-color: rgb(158, 153, 153);
-  color: rgb(15, 15, 15);
-}
 
 /* ----------------------------------------TEAM SELECTION POPUP--------------------------------------------- */
 .overlay {
@@ -73,4 +52,26 @@ header {
   text-align: center;
   color: green;
   font-size: xx-large;
+}
+
+/*table card*/
+
+.grid-child-element { 
+  
+  width: 40rem;
+  height:90vh;
+  padding: .6rem;
+  margin: .6rem; 
+  border: 1px solid rgb(7, 7, 7); 
+  box-shadow: 11px 11px 23px 5px rgba(85,85,85,1);
+}
+
+.tableContainer {
+  height:300px;
+  overflow: auto;
+}
+.table1 {
+  position: sticky;
+  top: 0;
+  width: 100%;
 }
