updated player selection component

--- a/frontend/src/app/home-component/home-component.component.html
+++ b/frontend/src/app/home-component/home-component.component.html
@@ -1,5 +1,5 @@
 <body>
-  <!-- <app-nav-bar-component></app-nav-bar-component> -->
+  <app-nav-bar-component></app-nav-bar-component>
   <div class="mainlogo">
     <img src="/assets/img/rpl.png" alt="Image 1">
     <!-- <p style="color: brown;">{{seasonNumber}}</p> -->
