--- a/frontend/src/app/home-component/home-component.component.html
+++ b/frontend/src/app/home-component/home-component.component.html
@@ -6,33 +6,33 @@
   </div>
 
   <div class="container">
-    <div class="img-holder mighty"><a target="_main"><img src="/assets/img/Mighty Mavericks.png"
+    <div class="img-holder mighty"><a href="/{{team}}"><img src="/assets/img/Mighty Mavericks.png"
           (click)="navigateTeam('Mighty Mavericks')"></a></div>
-    <div class="img-holder spartain"><a target="_main"><img src="/assets/img/Spartan Strikers.png"
+    <div class="img-holder spartain"><a href="/{{team}}"><img src="/assets/img/Spartan Strikers.png"
           (click)="navigateTeam('Spartan Strikers')"></a>
     </div>
-    <div class="img-holder uranus"><a target="_main"><img src="/assets/img/Uranus Hurricans.png"
+    <div class="img-holder uranus"><a href="/{{team}}"><img src="/assets/img/Uranus Hurricans.png"
           (click)="navigateTeam('Uranus Hurricans')"></a></div>
-    <div class="img-holder mars"><a target="_main"><img src="/assets/img/Mars Thunders.png"
+    <div class="img-holder mars"><a href="/{{team}}"><img src="/assets/img/Mars Thunders.png"
           (click)="navigateTeam('Mars Thunders')"></a></div>
 
-    <div class="img-holder mercury"><a target="_main"><img src="/assets/img/Mercury Steelers.png"
+    <div class="img-holder mercury"><a href="/{{team}}"><img src="/assets/img/Mercury Steelers.png"
           (click)="navigateTeam('Mercury Steelers')"></a></div>
-    <div class="img-holder neptune"><a target="_main"><img src="/assets/img/Neptune Knights.png"
+    <div class="img-holder neptune"><a href="/{{team}}"><img src="/assets/img/Neptune Knights.png"
           (click)="navigateTeam('Neptune Knights')"></a></div>
-    <div class="img-holder venus"><a target="_main"><img src="/assets/img/Venus Warriors.png"
+    <div class="img-holder venus"><a href="/{{team}}"><img src="/assets/img/Venus Warriors.png"
           (click)="navigateTeam('Venus Warriors')"></a></div>
-    <div class="img-holder vesta"><a target="_main"><img src="/assets/img/Vesta Avengers.png"
+    <div class="img-holder vesta"><a href="/{{team}}"><img src="/assets/img/Vesta Avengers.png"
           (click)="navigateTeam('Vesta Avengers')"></a></div>
 
 
-    <div class="img-holder saturn"><a target="_main"><img src="/assets/img/Saturn Superstars.png"
+    <div class="img-holder saturn"><a  href="/{{team}}"><img src="/assets/img/Saturn Superstars.png"
           (click)="navigateTeam('Saturn Superstars')"></a></div>
-    <div class="img-holder pluto"><a target="_main"><img src="/assets/img/Pluto Panthers.png"
+    <div class="img-holder pluto"><a href="/{{team}}"><img src="/assets/img/Pluto Panthers.png"
           (click)="navigateTeam('Pluto Panthers')"></a></div>
-    <div class="img-holder earth"><a target="_main"><img src="/assets/img/Earth Heros.png"
+    <div class="img-holder earth"><a href="/{{team}}"><img src="/assets/img/Earth Heros.png"
           (click)="navigateTeam('Earth Heros')"></a></div>
-    <div class="img-holder eris"><a target="_main"><img src="/assets/img/Eris Falcons.png"
+    <div class="img-holder eris"><a href="/{{team}}"><img src="/assets/img/Eris Falcons.png"
           (click)="navigateTeam('Eris Falcons')"></a></div>
 
 
