added admin add/delete opt

--- a/frontend/src/app/team-selection-component/team-selection-component.component.html
+++ b/frontend/src/app/team-selection-component/team-selection-component.component.html
@@ -1,5 +1,114 @@
+<script>
+    document.querySelector('.switch').checked = true;
+</script>
+
+
+
+
 <div class="grid-child-element">
 
+    <div class="switchAccess">
+    <label class="switch">
+        <input #switchInput (click)="checkAdminStatus()" type="checkbox">
+        <span class="slider round"></span>
+      </label>
+    </div>
+
+
+    <div *ngIf="adminAccess">
+    <div class="Teams">
+        <div class="TeamField">
+            <span><h5>Mighty Mavericks</h5></span>
+            <div class="button-group">
+                <button type="button" (click)="addPlayerAdmin('Mighty Mavericks')" class="btn btn-outline-success">Add</button>
+                <button type="button" (click)="deletePlayerAdmin('Mighty Mavericks')" class="btn btn-outline-danger">Delete</button>
+            </div>
+        </div>
+        <div class="TeamField">
+            <span><h5>Spartan Strikers</h5></span>
+            <div class="button-group">
+                <button type="button" (click)="addPlayerAdmin('Spartan Strikers')" class="btn btn-outline-success">Add</button>
+                <button type="button" (click)="deletePlayerAdmin('Spartan Strikers')" class="btn btn-outline-danger">Delete</button>
+            </div>
+        </div>
+        <div class="TeamField">
+            <span><h5>Uranus Hurricans</h5></span>
+            <div class="button-group">
+                <button type="button" (click)="addPlayerAdmin('Uranus Hurricans')" class="btn btn-outline-success">Add</button>
+                <button type="button" (click)="deletePlayerAdmin('Uranus Hurricans')" class="btn btn-outline-danger">Delete</button>
+            </div>
+        </div>
+        <div class="TeamField">
+            <span><h5>Mars Thunders</h5></span>
+            <div class="button-group">
+                <button type="button" (click)="addPlayerAdmin('Mars Thunders')" class="btn btn-outline-success">Add</button>
+                <button type="button" (click)="deletePlayerAdmin('Mars Thunders')" class="btn btn-outline-danger">Delete</button>
+            </div>
+        </div>
+        <div class="TeamField">
+            <span><h5>Mercury Steelers</h5></span>
+            <div class="button-group">
+                <button type="button" (click)="addPlayerAdmin('Mercury Steelers')" class="btn btn-outline-success">Add</button>
+                <button type="button" (click)="deletePlayerAdmin('Mercury Steelers')" class="btn btn-outline-danger">Delete</button>
+            </div>
+        </div>
+        <div class="TeamField">
+            <span><h5>Neptune Knights</h5></span>
+            <div class="button-group">
+                <button type="button" (click)="addPlayerAdmin('Neptune Knights')" class="btn btn-outline-success">Add</button>
+                <button type="button" (click)="deletePlayerAdmin('Neptune Knights')" class="btn btn-outline-danger">Delete</button>
+            </div>
+        </div>
+        <div class="TeamField">
+            <span><h5>Venus Warriors</h5></span>
+            <div class="button-group">
+                <button type="button" (click)="addPlayerAdmin('Venus Warriors')" class="btn btn-outline-success">Add</button>
+                <button type="button" (click)="deletePlayerAdmin('Venus Warriors')" class="btn btn-outline-danger">Delete</button>
+            </div>
+        </div>
+        <div class="TeamField">
+            <span><h5>Vesta Avengers</h5></span>
+            <div class="button-group">
+                <button type="button" (click)="addPlayerAdmin('Vesta Avengers')" class="btn btn-outline-success">Add</button>
+                <button type="button" (click)="deletePlayerAdmin('Vesta Avengers')" class="btn btn-outline-danger">Delete</button>
+            </div>
+        </div>
+        <div class="TeamField">
+            <span><h5>Saturn Superstars</h5></span>
+            <div class="button-group">
+                <button type="button" (click)="addPlayerAdmin('Saturn Superstars')" class="btn btn-outline-success">Add</button>
+                <button type="button" (click)="deletePlayerAdmin('Saturn Superstars')" class="btn btn-outline-danger">Delete</button>
+            </div>
+        </div>
+        <div class="TeamField">
+            <span><h5>Pluto Panthers</h5></span>
+            <div class="button-group">
+                <button type="button" (click)="addPlayerAdmin('Pluto Panthers')" class="btn btn-outline-success">Add</button>
+                <button type="button" (click)="deletePlayerAdmin('Pluto Panthers')" class="btn btn-outline-danger">Delete</button>
+            </div>
+        </div>
+        <div class="TeamField">
+            <span><h5>Earth Heros</h5></span>
+            <div class="button-group">
+                <button type="button" (click)="addPlayerAdmin('Earth Heros')" class="btn btn-outline-success">Add</button>
+                <button type="button" (click)="deletePlayerAdmin('Earth Heros')" class="btn btn-outline-danger">Delete</button>
+            </div>
+        </div>
+        <div class="TeamField">
+            <span><h5>Eris Falcons</h5></span>
+            <div class="button-group">
+                <button type="button" (click)="addPlayerAdmin('Eris Falcons')" class="btn btn-outline-success">Add</button>
+                <button type="button" (click)="deletePlayerAdmin('Eris Falcons')" class="btn btn-outline-danger">Delete</button>
+            </div>
+        </div>
+       
+    </div>
+       
+        
+          
+    </div>
+
+    <div *ngIf="!adminAccess" class="adminSelect">
     <div class="selector">
     
         <div class="content-container ">
@@ -7,7 +116,7 @@
         </div>
     
     </div>
-    <div *ngIf="selectedTeamName">
+    <div *ngIf="(selectedTeamName)&&(displayBanner)">
         <div class="team-detail-text">
             <p>
                 <span>
@@ -36,7 +145,7 @@
         </div>
         <div class="tableContainer ">
 
-            <table *ngIf="TeamDetails.length>=1" class="table-success table1 table table-dark table-hover table-bordered mt-3 tablesize tablee">
+            <table *ngIf="(TeamDetails.length>=1)" class="table-success table1 table table-dark table-hover table-bordered mt-3 tablesize tablee">
                 <thead>
                 <tr>
                     <!-- <th scope="col">#</th> -->
@@ -81,4 +190,5 @@
             </div>
         </div>
     </div>
+</div>
 </div>
